syntax = "proto3";

package user.service;

option java_package = "com.bg.usermicroservice.grpc";
option java_multiple_files = true;

message GetStripeIdResponse {
  string stripeId = 1;
}