syntax = "proto3";

package user.service;

option java_package = "com.bg.usermicroservice.grpc";
option java_multiple_files = true;

message UpdateStripeIdRequest {
  string clientId = 1;
  string stripeId = 2;
}